tests/error/type_errors/unpack_tuple_starred.err
Error: Invalid starred unpacking (at $FILE:6:8)
  | 
4 | @compile_guppy
5 | def foo() -> int:
6 |     a, *bs = 1, 2, True
  |         ^^ Expression of type `(int, bool)` cannot be collected into a
  |            starred assignment since the yielded items have
  |            different types

Guppy compilation failed due to 1 previous error
